# Mocha

./: .gitignore  README.md  pyproject.toml
src/mocha/: __main__.py
src/mocha/file_extract/: epub.py  mobi.py  pdf.py
src/mocha/file_handling/: file_type.py  log_handling.py  tmp_handling.py
